	* Implemented cash item gifting in the cash shop.
	* Cleaned up cash shop packets.

2013-08-10  GoldenKevin  (revision 224)

	* Fixed expiration date overflow when buying from the cash shop.
	* Downgraded incorrectly assigned CERTAIN_PACKET_EDITING infractions to
	POSSIBLE_PACKET_EDITING in cash shop handling.
	* Send error messages to players when they get an infraction to help with
	debugging wrongful cheat tracker checks.
	* Implemented wish list changes.
	* Implemented inventory expansion from the cash shop.

2013-08-10  GoldenKevin  (revision 225)

	* Implemented coupon codes in cash shop.

2013-08-10  GoldenKevin  (revision 226)

	* Enable actions after player clicks Check Cash button in cash shop.
	* Implemented buy character slots in cash shop.
	* Corrected cash shop error message packets.

2013-08-11  GoldenKevin  (revision 227)

	* Do not take cash unless the staging inventory has room.
	* Fixed all packets for couple and friendship rings.
	* Implemented buy couple and friendship rings in cash shop.

2013-08-11  GoldenKevin  (revision 228)

	* Implemented SN blocking system in cash shop. Initialized to block stock of
	Safety Charms and Venus Fireworks that should not be on sale.
	* Formatted some of the unknown bytes used in EnterShopHandler.writeEnterCs
	to make the packet structure a bit clearer.

2013-08-13  GoldenKevin  (revision 229)

	* Implemented Best Item list in cash shop.
	* Implemented custom commodity overrides in cash shop.
	* Implemented limited quantity commodities in cash shop.

2013-08-13  GoldenKevin  (revision 230)

	* Removed test lines from cashshopblockedserialnumbers.txt,
	cashshopcommodityoverrides.txt, and cashshoplimitedcommodities.txt.
	* Fixed error 38 when writing cash shop error ERROR_OUT_OF_STOCK.
	* Implemented buying items with mesos in cash shop.

Copyright 2011-2013 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.